--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,10 @@ jobs:
 
       - run:
           name: Code sniffer
-          command: docker run cargox-qa-data bundle exec rubocop
+          command: docker run pipefy_test_api_ruby bundle exec rubocop
 
 workflows:
   version: 2
   build_and_push:
     jobs:
       - build:
-          context: org-global
